--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
+    "sweetalert2": "^11.7.12",
     "swiper": "^10.0.4"
   },
   "devDependencies": {
